tests/language/wildcard_variables/feature_enabled_error_test.dart
// Copyright (c) 2024, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

// Wildcard variables are enabled by default.

main() {
  int _ = 1;
  _ = 2;
//^
// [analyzer] COMPILE_TIME_ERROR.UNDEFINED_IDENTIFIER
// [cfe] Setter not found: '_'.
}
